// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar renders the UI snapshot correctly 1`] = `
<div
  className="css-v54qrt"
  id="ds-componentWrapper-basic"
>
  <form
    aria-label="SearchBar label - Search for items in Animal Crossing New Horizons"
    className="css-1xdhyk6"
    id="searchbar-form-basic"
    onSubmit={[MockFunction]}
  >
    <div
      className="css-1ik4laa"
    >
      <div
        className="textInput css-1u8qly9"
        id="ds-componentWrapper-searchbar-textinput-basic"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-describedby="basic-helperText"
            aria-label="Item Search"
            autoComplete={null}
            className="chakra-input textInput css-1xdhyk6"
            disabled={false}
            id="searchbar-textinput-basic"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search "
            required={false}
            step={null}
            type="text"
          />
        </div>
      </div>
      <button
        className="chakra-button searchButton css-8bx9xp"
        data-button={true}
        id="ds-button-searchbar-button-basic"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="searchbar-icon-basic"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="ds-helperErrorText-ds-componentWrapper-basic"
  >
    <div
      className="css-0"
      dangerouslySetInnerHTML={
        {
          "__html": "Search for items in Animal Crossing New Horizons",
        }
      }
    />
  </div>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 2`] = `
<div
  className="css-v54qrt"
  id="ds-componentWrapper-withSelect"
>
  <form
    aria-label="SearchBar label - Search for items in Animal Crossing New Horizons"
    className="css-1xdhyk6"
    id="searchbar-form-withSelect"
    onSubmit={[MockFunction]}
  >
    <div
      className="css-1u8qly9"
      data-select={true}
      id="ds-componentWrapper-searchbar-select-withSelect"
    >
      <div
        className="css-0"
      >
        <div
          className="chakra-select__wrapper css-42b2qy"
        >
          <select
            aria-label="Select a category"
            className="chakra-select css-1ik61og"
            disabled={false}
            id="searchbar-select-withSelect"
            name="selectName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            value="Songs"
          >
            <option
              value="art"
            >
              Art
            </option>
            <option
              value="bushes"
            >
              Bushes
            </option>
            <option
              value="clothing"
            >
              Clothing
            </option>
            <option
              value="flowers"
            >
              Flowers
            </option>
            <option
              value="fossils"
            >
              Fossils
            </option>
            <option
              value="fruits"
            >
              Fruits
            </option>
            <option
              value="furniture"
            >
              Furniture
            </option>
            <option
              value="songs"
            >
              Songs
            </option>
            <option
              value="tools"
            >
              Tools
            </option>
            <option
              value="villagers"
            >
              Villagers
            </option>
          </select>
          <div
            className="chakra-select__icon-wrapper css-162mkon"
          >
            <svg
              aria-hidden={true}
              className="chakra-icon chakra-select__icon css-1nreziu"
              data-file-name="SvgArrow"
              focusable={false}
              id="searchbar-select-withSelect-icon"
              role="presentation"
              style={
                {
                  "color": "currentColor",
                  "height": "1em",
                  "width": "1em",
                }
              }
              title="arrow icon"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-1ik4laa"
    >
      <div
        className="textInput css-1u8qly9"
        id="ds-componentWrapper-searchbar-textinput-withSelect"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-describedby="withSelect-helperText"
            aria-label="Item Search"
            autoComplete={null}
            className="chakra-input textInput css-1xdhyk6"
            disabled={false}
            id="searchbar-textinput-withSelect"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search "
            required={false}
            step={null}
            type="text"
          />
        </div>
      </div>
      <button
        className="chakra-button searchButton css-8bx9xp"
        data-button={true}
        id="ds-button-searchbar-button-withSelect"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="searchbar-icon-withSelect"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="ds-helperErrorText-ds-componentWrapper-withSelect"
  >
    <div
      className="css-0"
      dangerouslySetInnerHTML={
        {
          "__html": "Search for items in Animal Crossing New Horizons",
        }
      }
    />
  </div>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 3`] = `
<div
  className="css-v54qrt"
  id="ds-componentWrapper-withoutHelperText"
>
  <form
    aria-label="SearchBar label"
    className="css-1xdhyk6"
    id="searchbar-form-withoutHelperText"
    onSubmit={[MockFunction]}
  >
    <div
      className="css-1ik4laa"
    >
      <div
        className="textInput css-1u8qly9"
        id="ds-componentWrapper-searchbar-textinput-withoutHelperText"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-label="Item Search"
            autoComplete={null}
            className="chakra-input textInput css-1xdhyk6"
            disabled={false}
            id="searchbar-textinput-withoutHelperText"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search "
            required={false}
            step={null}
            type="text"
          />
        </div>
      </div>
      <button
        className="chakra-button searchButton css-8bx9xp"
        data-button={true}
        id="ds-button-searchbar-button-withoutHelperText"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="searchbar-icon-withoutHelperText"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 4`] = `
<div
  className="css-v54qrt"
  id="ds-componentWrapper-withClearButton"
>
  <form
    aria-label="SearchBar label - Search for items in Animal Crossing New Horizons"
    className="css-1xdhyk6"
    id="searchbar-form-withClearButton"
    onSubmit={[MockFunction]}
  >
    <div
      className="css-1ik4laa"
    >
      <div
        className="textInput css-1u8qly9"
        id="ds-componentWrapper-searchbar-textinput-withClearButton"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-describedby="withClearButton-helperText"
            aria-label="Item Search"
            autoComplete={null}
            className="chakra-input textInput css-1xdhyk6"
            disabled={false}
            id="searchbar-textinput-withClearButton"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search "
            required={false}
            step={null}
            type="text"
          />
        </div>
      </div>
      <button
        className="chakra-button searchButton css-8bx9xp"
        data-button={true}
        id="ds-button-searchbar-button-withClearButton"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="searchbar-icon-withClearButton"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="ds-helperErrorText-ds-componentWrapper-withClearButton"
  >
    <div
      className="css-0"
      dangerouslySetInnerHTML={
        {
          "__html": "Search for items in Animal Crossing New Horizons",
        }
      }
    />
  </div>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 5`] = `
<div
  className="css-v54qrt"
  id="ds-componentWrapper-invalidState"
>
  <form
    aria-label="SearchBar label"
    className="css-1xdhyk6"
    id="searchbar-form-invalidState"
    onSubmit={[MockFunction]}
  >
    <div
      className="css-1ik4laa"
    >
      <div
        className="textInput css-1u8qly9"
        id="ds-componentWrapper-searchbar-textinput-invalidState"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-describedby="searchbar-textinput-invalidState-helperText"
            aria-invalid={true}
            aria-label="Item Search"
            autoComplete={null}
            className="chakra-input textInput css-1xdhyk6"
            disabled={false}
            id="searchbar-textinput-invalidState"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search "
            required={false}
            step={null}
            type="text"
          />
        </div>
        <div
          aria-atomic={true}
          aria-live="polite"
          className="css-1xdhyk6"
          data-isinvalid={true}
          id="ds-helperErrorText-ds-componentWrapper-searchbar-textinput-invalidState"
        />
      </div>
      <button
        className="chakra-button searchButton css-8bx9xp"
        data-button={true}
        id="ds-button-searchbar-button-invalidState"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="searchbar-icon-invalidState"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 6`] = `
<div
  className="css-v54qrt"
  id="ds-componentWrapper-disabledState"
>
  <form
    aria-label="SearchBar label"
    className="css-1xdhyk6"
    id="searchbar-form-disabledState"
    onSubmit={[MockFunction]}
  >
    <div
      className="css-1ik4laa"
    >
      <div
        className="textInput css-1u8qly9"
        id="ds-componentWrapper-searchbar-textinput-disabledState"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-label="Item Search"
            autoComplete={null}
            className="chakra-input textInput css-1xdhyk6"
            disabled={true}
            id="searchbar-textinput-disabledState"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search "
            required={false}
            step={null}
            type="text"
          />
        </div>
      </div>
      <button
        className="chakra-button searchButton css-8bx9xp"
        data-button={true}
        disabled={true}
        id="ds-button-searchbar-button-disabledState"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="searchbar-icon-disabledState"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 7`] = `
<div
  className="css-v54qrt"
  id="ds-componentWrapper-requiredState"
>
  <form
    aria-label="SearchBar label"
    className="css-1xdhyk6"
    id="searchbar-form-requiredState"
    onSubmit={[MockFunction]}
  >
    <div
      className="css-1ik4laa"
    >
      <div
        className="textInput css-1u8qly9"
        id="ds-componentWrapper-searchbar-textinput-requiredState"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-label="Item Search"
            aria-required={true}
            autoComplete={null}
            className="chakra-input textInput css-1xdhyk6"
            disabled={true}
            id="searchbar-textinput-requiredState"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search (required)"
            required={true}
            step={null}
            type="text"
          />
        </div>
      </div>
      <button
        className="chakra-button searchButton css-8bx9xp"
        data-button={true}
        disabled={true}
        id="ds-button-searchbar-button-requiredState"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="searchbar-icon-requiredState"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 8`] = `
<div
  className="css-v54qrt"
  id="ds-componentWrapper-noBrandButtonType"
>
  <form
    aria-label="SearchBar label"
    className="css-1xdhyk6"
    id="searchbar-form-noBrandButtonType"
    onSubmit={[MockFunction]}
  >
    <div
      className="css-1ik4laa"
    >
      <div
        className="textInput css-1u8qly9"
        id="ds-componentWrapper-searchbar-textinput-noBrandButtonType"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-label="Item Search"
            aria-required={true}
            autoComplete={null}
            className="chakra-input textInput css-1xdhyk6"
            disabled={true}
            id="searchbar-textinput-noBrandButtonType"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search (required)"
            required={true}
            step={null}
            type="text"
          />
        </div>
      </div>
      <button
        className="chakra-button searchButton css-8bx9xp"
        data-button={true}
        disabled={true}
        id="ds-button-searchbar-button-noBrandButtonType"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="searchbar-icon-noBrandButtonType"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 9`] = `
<div
  className="css-v54qrt"
  id="ds-componentWrapper-withHeading"
>
  <h2
    className="chakra-heading css-1xdhyk6"
    id="ds-componentWrapper-withHeading-heading"
  >
    A Heading
  </h2>
  <form
    aria-label="SearchBar label"
    className="css-1xdhyk6"
    id="searchbar-form-withHeading"
    onSubmit={[MockFunction]}
  >
    <div
      className="css-1ik4laa"
    >
      <button
        className="chakra-button searchButton css-8bx9xp"
        data-button={true}
        id="ds-button-searchbar-button-withHeading"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="searchbar-icon-withHeading"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 10`] = `
<div
  className="css-v54qrt"
  id="ds-componentWrapper-withDescription"
>
  <p
    className="chakra-text css-1xdhyk6"
  >
    A description
  </p>
  <form
    aria-label="SearchBar label"
    className="css-1xdhyk6"
    id="searchbar-form-withDescription"
    onSubmit={[MockFunction]}
  >
    <div
      className="css-1ik4laa"
    >
      <button
        className="chakra-button searchButton css-8bx9xp"
        data-button={true}
        id="ds-button-searchbar-button-withDescription"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="searchbar-icon-withDescription"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 11`] = `
<div
  className="css-v54qrt"
  id="ds-componentWrapper-withHeadingAndDescription"
>
  <h2
    className="chakra-heading css-1xdhyk6"
    id="ds-componentWrapper-withHeadingAndDescription-heading"
  >
    A Heading
  </h2>
  <p
    className="chakra-text css-1xdhyk6"
  >
    A description
  </p>
  <form
    aria-label="SearchBar label"
    className="css-1xdhyk6"
    id="searchbar-form-withHeadingAndDescription"
    onSubmit={[MockFunction]}
  >
    <div
      className="css-1ik4laa"
    >
      <button
        className="chakra-button searchButton css-8bx9xp"
        data-button={true}
        id="ds-button-searchbar-button-withHeadingAndDescription"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="searchbar-icon-withHeadingAndDescription"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 12`] = `
<div
  className="css-v54qrt"
  id="ds-componentWrapper-chakra"
>
  <form
    aria-label="SearchBar label - Search for items in Animal Crossing New Horizons"
    className="css-kle7zy"
    id="searchbar-form-chakra"
    onSubmit={[MockFunction]}
  >
    <div
      className="css-1ik4laa"
    >
      <div
        className="textInput css-1u8qly9"
        id="ds-componentWrapper-searchbar-textinput-chakra"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-describedby="chakra-helperText"
            aria-label="Item Search"
            autoComplete={null}
            className="chakra-input textInput css-1xdhyk6"
            disabled={false}
            id="searchbar-textinput-chakra"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search "
            required={false}
            step={null}
            type="text"
          />
        </div>
      </div>
      <button
        className="chakra-button searchButton css-8bx9xp"
        data-button={true}
        id="ds-button-searchbar-button-chakra"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="searchbar-icon-chakra"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="ds-helperErrorText-ds-componentWrapper-chakra"
  >
    <div
      className="css-0"
      dangerouslySetInnerHTML={
        {
          "__html": "Search for items in Animal Crossing New Horizons",
        }
      }
    />
  </div>
</div>
`;

exports[`SearchBar renders the UI snapshot correctly 13`] = `
<div
  className="css-v54qrt"
  data-testid="props"
  id="ds-componentWrapper-props"
>
  <form
    aria-label="SearchBar label - Search for items in Animal Crossing New Horizons"
    className="css-1xdhyk6"
    id="searchbar-form-props"
    onSubmit={[MockFunction]}
  >
    <div
      className="css-1ik4laa"
    >
      <div
        className="textInput css-1u8qly9"
        id="ds-componentWrapper-searchbar-textinput-props"
      >
        <div
          className="css-79elbk"
        >
          <input
            aria-describedby="props-helperText"
            aria-label="Item Search"
            autoComplete={null}
            className="chakra-input textInput css-1xdhyk6"
            disabled={false}
            id="searchbar-textinput-props"
            name="textInputName"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Item Search "
            required={false}
            step={null}
            type="text"
          />
        </div>
      </div>
      <button
        className="chakra-button searchButton css-8bx9xp"
        data-button={true}
        id="ds-button-searchbar-button-props"
        type="submit"
      >
        <svg
          aria-hidden={true}
          className="chakra-icon css-1vgifmd"
          data-file-name="SvgSearch"
          focusable={false}
          id="searchbar-icon-props"
          role="img"
          title="search icon"
        />
        <span>
          Search
        </span>
      </button>
    </div>
  </form>
  <div
    aria-atomic={true}
    aria-live="polite"
    className="css-1xdhyk6"
    data-isinvalid={false}
    id="ds-helperErrorText-ds-componentWrapper-props"
  >
    <div
      className="css-0"
      dangerouslySetInnerHTML={
        {
          "__html": "Search for items in Animal Crossing New Horizons",
        }
      }
    />
  </div>
</div>
`;
